@@ -262,10 +262,17 @@ struct pkl_alien_token
 typedef struct pkl_alien_token *(*pkl_alien_token_handler_fn) (const char *id,
                                                                char **errmsg);
 
+typedef struct pkl_alien_token *(*pkl_alien_dtoken_handler_fn) (char delim,
+                                                                const char *id,
+                                                                char **errmsg);
+
 pkl_alien_token_handler_fn pkl_alien_token_fn (pkl_compiler compiler);
+pkl_alien_dtoken_handler_fn pkl_alien_dtoken_fn (pkl_compiler compiler);
 
 void pkl_set_alien_token_fn (pkl_compiler compiler,
                              pkl_alien_token_handler_fn cb);
+void pkl_set_alien_dtoken_fn (pkl_compiler compiler,
+                              pkl_alien_dtoken_handler_fn cb);
 
 /* Set/get the lexical_cuckolding_p flag in/from the compiler.  If
    this flag is set, the compiler will recognize alien tokens and
